@@ -2,17 +2,27 @@
 Hash: SHA256
 
 DIST xfce4-eyes-plugin-4.4.2.tar.bz2 308935 SHA256 dad102fedd0d9e6df45338a018387b2aacaf24b05eb798275be0dfc05ffa3021 SHA512 67e99da12829ae4724c7e57ed3d6825933c824157066dffc187380da80b3eef04756d1899c445f52b687ce8c1df3fff95a50ffc00af18d058c54d075bff6a33f WHIRLPOOL 07ff0c4f5cfa1ff304ca41a0cd6245fd65a924327d72d5b7c85a822dc479d2a779c40a283329e093772db635b976bafae949294ff18c48d4912da49215da544b
+DIST xfce4-eyes-plugin-4.4.4.tar.bz2 352535 SHA256 240ce85b68d3d161f276ebbea97072dd6ee3df77062fd073bf6eeb4d3d1400ca SHA512 3daaae5af2030e007af969832aeb11eba4aad0f4d6a166c2965e16a4e91619acf35ad3c0dd82e32d817122330c4b009cf3d469473824af133134e05a161df924 WHIRLPOOL b706b9a89d6fb0f2e722fcea4b981f0adf9e9cb5ee4866ba79c09fceed2b80c05f19cdf2903907440d1adb564764214c942cea6ef570893c1dc014ca904b143e
 EBUILD xfce4-eyes-plugin-4.4.2.ebuild 939 SHA256 06d6158e5d7307922138586cdb6cb6e982ca636707aeb3ffc9e641deffaf55bb SHA512 ccd39276f330866855205192173fc0fb610394d4ad6d5825e20adaec36d222545d6807e5f3452446adf37a26fa5f6f6d52e8c1857a4df3d9d212825c93f21ae2 WHIRLPOOL 86646857016d6bebe13c56b3304123ad840f3bb64aae5009b1cff63d8c3325fe544e500d29ac2639b3eb4d787bfdddf0e589ef8418a134a30f4b64bf7622991f
-MISC ChangeLog 3447 SHA256 057a1f5775848621a61a002e0e37ba6676ff361b3f5c890094cd9d23f1e6c4b6 SHA512 c23c340b6319ce7ad22b81d4d8cc01b5098f776efbd77d488ac2eaa05d7062ab5f388314296e37ab89b04c3f791f4a8bce56c2549715178a65488782650c73e6 WHIRLPOOL b2d568405d17313744dea29d0b938008e052dce92b024c905ce72726748e0fa03e4babde16b85f3996aa1c26fc75bb51ff85d576ae8d40889c5379e6364f6654
+EBUILD xfce4-eyes-plugin-4.4.4.ebuild 955 SHA256 1c16e49461061d633ccb261368cbbbb76cd391fa66e5c87c383fbfd2b84aa7d7 SHA512 b5f7f0419739d179786e14de97f2ae97f62657ac5f9fe65304ce4a9a26b00c076ab5b56ba6b893c2e57407d3dd84e3596d1447045973a591be095aab18320e50 WHIRLPOOL 77b46a3905c9c9c2dbc1753d13be3d86108efbd5d0b9da63bc1583b9b39ecc9a573bd18922582d344801be4455dc52a69a578a3527706d7081ac09f0406037e9
+MISC ChangeLog 3638 SHA256 cef700cb80d346007f514c74beaf923ba39622a09011755622a6b1f919aacb76 SHA512 685dfec7c6b7e6366f43b38537fafd06dac71a596108cb2c2b25bded57328ecb79ee5e7c00e89789b3f9076a4fcddc899134ddd51c61d388c45b469d8f90b81b WHIRLPOOL 36e47bfd62803ee507b1cd13799169f304f8f7ca50fd11cc26fbc0c4e072d1279d93339bd3d7207f14e890de58762dcc5e6d192b3ab692414613ec88d1893b54
 MISC metadata.xml 159 SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63 SHA512 000eb10e453390fb27843585adf354d725e77d881553d97a1a242bf06578a402ee4a924d9d8205a3fa687a59e2402bc9f3e1c227e448e05026354c196cf0a4f3 WHIRLPOOL 6f01aa01b8124d752be8e6c550ffdfc9093d45b206771c924ce25ce3f0daf006a669721d1385ff1bc803df342322d1c264f2905d3ccc44686c937deae8308ec3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJRhpQCAAoJEEdUh39IaPFN2QQH/jBSfZibM1tX9iklZ8mhiQE8
-Z5V/nUrbuBsr56K04tQQmIrijWhWO83mpFQTDK2qi+6ZPxZpEoplU1bm/QTNqgZ0
-QWV1Ba/pBet7zEaE1eyG8U/Xc1V01ZF5Im7SuKnQtLfIWezu+ZV7ADQeNVdP3/fz
-VCDaeIEScNt2xshbd/mPyxaM8ehjVyiuQJIRVpm0+9lUatG4Aqu54MbcQQo9yDZI
-4rqCHqaGdRiiYB2EFXtR6uZt4ZYvyiTuVSU3Fz0r/HdwaPcA0FeNupIB3UmazWkf
-mJJxLfPEl0Ohe9EUKLNYaTnZEHLeAoEVWfnfNRtjMTYbZG1VnMbuFVrjZIsL1eA=
-=tVO+
+iQJ8BAEBCABmBQJVFxMwXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOd+AQAJzhrE7jrbDDnXH7loTT5iYR
+0YON+aP9PObYF+f+Z8UIYPEu+QWSVb+qXp3uOkTHWcTVzGvNArSqCcxEDPtIpGT+
+aKW8os+iD60Hjuy73t1JHyM9ZJRtziKif93cTjvJUAD1DD70sle7WuDm0yroAwkD
+3WcuAexX9W1lKAKqeBM7ECD0ToGqCp+KGcTr5vZDXFHkIFSMzsb6zqbdJx+e7RZA
+Wto8M670fkzMFx8/yq51Enlx4tsKy8BhPgRzaD/vT4wEZzvf4wxjGtcIYOVoe2jS
+aH4Nddvp+BdAkKIfDZgy/7fO5SXZy5z2P/S83KnwLMI7s6VyrsXi+osy0NOo43k7
+urJLunhe2xvpVzOQNc5Q/lixgZFtO/W1zA71JPVi5LvGPk5WIxH7xAb9ojxJKeKi
+boCP6RXmvqbu7C9FPWm59+4K8HIFmfk/NK48wpvc5SZfHcH8UfqFqkc4/kB96zw/
+Hr65Uq8Ntiqq35XjIedabuio2ngzmRSPMtqwAZY4YqpcSJVbsce3wBxlbc5Kqinb
+woICLFXrw6Zfqyttu9bnCRdJyoLLVzEVBb01eeULBGo8moxRJ62TUUKVitIA5jkU
+BzFvbnz4lS+VhAz07m3ueDOTZUXFZ1Qa2HmiKftSpmAImtFwrWa7/4XoLywvjwEw
+OJl/o9tNF9Nag7SxzW9H
+=dihF
 -----END PGP SIGNATURE-----
