@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/xfce4-eyes-plugin
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-eyes-plugin/ChangeLog,v 1.24 2013/05/05 17:17:05 ssuominen Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-eyes-plugin/ChangeLog,v 1.25 2015/03/28 20:46:39 mgorny Exp $
+
+*xfce4-eyes-plugin-4.4.4 (28 Mar 2015)
+
+  28 Mar 2015; Michał Górny <mgorny@gentoo.org> +xfce4-eyes-plugin-4.4.4.ebuild:
+  Version bump with translation updates and minor build system fixes.
 
   05 May 2013; Samuli Suominen <ssuominen@gentoo.org>
   -files/xfce4-eyes-plugin-4.4.1-libxfce4ui.patch,
